--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
   },
+  "homepage": "https://ajayposhak.github.io/alex-the-hungry-dog",
 
 
   "scripts": {
